Uploaded by https://stackedit.io/

--- a/ch03_aim1.Rmd
+++ b/ch03_aim1.Rmd
@@ -770,3 +770,6 @@ Of course, it is possible that this null effect truly does reflect an underlying
 <!--stackedit_data:
 eyJoaXN0b3J5IjpbLTIxNDM3NDY2NDldfQ==
 -->
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbNDMyNTc3MDIwXX0=
+-->
