Uploaded by https://stackedit.io/

--- a/ch03_aim1.Rmd
+++ b/ch03_aim1.Rmd
@@ -771,7 +771,6 @@ Of course, it is possible that this null effect truly does reflect an underlying
 eyJoaXN0b3J5IjpbLTIxNDM3NDY2NDldfQ==
 -->
 <!--stackedit_data:
-eyJwcm9wZXJ0aWVzIjoiZXh0ZW5zaW9uczpcbiAgcHJlc2V0Oi
-BnZm1cbiIsImhpc3RvcnkiOlsxOTc5ODIzMDUxLDQzMjU3NzAy
-MF19
+eyJoaXN0b3J5IjpbNDMyNTc3MDIwLDE5Nzk4MjMwNTEsNDMyNT
+c3MDIwXX0=
 -->
